--- a/src/public/styles/scss/style.scss
+++ b/src/public/styles/scss/style.scss
@@ -487,22 +487,22 @@ span.menu_icon{
     width: $IconMeasuresSel;
     height: $IconMeasuresSel;
 }
-span.project_icon{
-    background: url(../../assets/icons/project.png) no-repeat center center;
+span.top_icon{
+    background: url(../../assets/icons/top-tres.png) no-repeat center center;
     background-size:cover;
     width: $IconMeasures;
     height: $IconMeasures;
     display: $DisplayIcon
 }
-span.note_icon{
-    background: url(../../assets/icons/note.png) no-repeat center center;
+span.news_icon{
+    background: url(../../assets/icons/news.png) no-repeat center center;
     background-size:cover;
     width: $IconMeasures;
     height: $IconMeasures;
     display: $DisplayIcon
 }
-span.social_icon{
-    background: url(../../assets/icons/social-media.png) no-repeat center center;
+span.console_icon{
+    background: url(../../assets/icons/consola-de-video.png) no-repeat center center;
     background-size:cover;
     width: $IconMeasures;
     height: $IconMeasures;
