--- a/src/public/styles/scss/style.scss
+++ b/src/public/styles/scss/style.scss
@@ -153,10 +153,12 @@ section#container ul {
 	display: flex;
 	justify-content: center;
 }
-section#container .escolar-information{
+.news_one-block{
+	background-color: $BackPhotoColor;
+	margin-top: 10%;
 	margin-left: 10%;
 	margin-right: 10%;
-	background-color: $InformationCOlor;
+	border-radius: 2%;
 }
 .photo-block{
 	background-color: $BackPhotoColor;
@@ -171,8 +173,18 @@ section#container .escolar-information{
 }
 
 
+.news_one-block #tlt{
+	color: rgba($color: #2797a1, $alpha: 1.0);
+}
+.news_one-block #nvidia-photo{
+	background: url("../../assets/images/nvidia.png");
+	background-size:cover ;
+	width: 200px;
+	height: 200px;
+	display: $DisplayIcon;
+	margin-left: 40%;	
 
-
+}
 
 .photo-block #panel1{
 	background: url("../../assets/images/FI.jpg");
