--- a/src/public/styles/css/style.css
+++ b/src/public/styles/css/style.css
@@ -140,27 +140,18 @@ section#container ul {
 
 .news_one-block {
   background-color: #930017;
-  margin-top: 10%;
+  margin-top: 2%;
   margin-left: 10%;
   margin-right: 10%;
   border-radius: 2%;
 }
 
-.photo-block {
+.news_one-block #tit {
   background-color: #930017;
-  margin-top: 10%;
+  margin-top: 2%;
   margin-left: 10%;
   margin-right: 10%;
   border-radius: 2%;
-}
-
-.photo-block div {
-  display: flex;
-  justify-content: center;
-}
-
-.news_one-block #tlt {
-  color: #2797a1;
 }
 
 .news_one-block #nvidia-photo {
@@ -170,6 +161,94 @@ section#container ul {
   height: 200px;
   display: inline-block;
   margin-left: 40%;
+}
+
+.news_one-block #nvidia-vid {
+  display: flex;
+  justify-content: center;
+}
+
+.news_one-block #nvidia-text {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.news_two-block {
+  background-color: #930017;
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-radius: 2%;
+}
+
+.news_two-block #halo-photo {
+  background: url("../../assets/images/halo.png");
+  background-size: 200px 200px;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  margin-left: 40%;
+}
+
+.news_three-block {
+  background-color: #930017;
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-radius: 2%;
+}
+
+.news_three-block #sony-photo {
+  background: url("../../assets/images/sony.png");
+  background-size: 200px 200px;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  margin-left: 40%;
+}
+
+.news_four-block {
+  background-color: #930017;
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-radius: 2%;
+}
+
+.news_four-block #cod-photo {
+  background: url("../../assets/images/cod.png");
+  background-size: 200px 200px;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  margin-left: 40%;
+}
+
+.news_five-block {
+  background-color: #930017;
+  margin-top: 2%;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-radius: 2%;
+}
+
+.news_five-block #mario-photo {
+  background: url("../../assets/images/mario.png");
+  background-size: 200px 200px;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  margin-left: 40%;
+}
+
+.photo-block div {
+  display: flex;
+  justify-content: center;
+}
+
+#tlt {
+  color: #2797a1;
 }
 
 .photo-block #panel1 {
