--- a/src/public/styles/scss/style.scss
+++ b/src/public/styles/scss/style.scss
@@ -155,26 +155,19 @@ section#container ul {
 }
 .news_one-block{
 	background-color: $BackPhotoColor;
-	margin-top: 10%;
+	margin-top: 2%;
 	margin-left: 10%;
 	margin-right: 10%;
 	border-radius: 2%;
+	
 }
-.photo-block{
+.news_one-block #tit{
 	background-color: $BackPhotoColor;
-	margin-top: 10%;
+	margin-top: 2%;
 	margin-left: 10%;
 	margin-right: 10%;
 	border-radius: 2%;
-}
-.photo-block div{
-	display:flex;
-	justify-content: center;
-}
-
-
-.news_one-block #tlt{
-	color: rgba($color: #2797a1, $alpha: 1.0);
+	
 }
 .news_one-block #nvidia-photo{
 	background: url("../../assets/images/nvidia.png");
@@ -183,8 +176,87 @@ section#container ul {
 	height: 200px;
 	display: $DisplayIcon;
 	margin-left: 40%;	
-
 }
+.news_one-block #nvidia-vid{
+	display: flex;
+	justify-content: center;
+	
+}
+.news_one-block #nvidia-text{
+	display: flex;
+	justify-content: center;
+	margin: 20px;
+}
+.news_two-block{
+	background-color: $BackPhotoColor;
+	margin-top: 2%;
+	margin-left: 10%;
+	margin-right: 10%;
+	border-radius: 2%;
+}
+.news_two-block #halo-photo{
+	background: url("../../assets/images/halo.png");
+	background-size: 200px 200px;
+	width: 200px;
+	height: 200px;
+	display: $DisplayIcon;
+	margin-left: 40%;	
+}
+.news_three-block{
+	background-color: $BackPhotoColor;
+	margin-top: 2%;
+	margin-left: 10%;
+	margin-right: 10%;
+	border-radius: 2%;
+}
+.news_three-block #sony-photo{
+	background: url("../../assets/images/sony.png");
+	background-size: 200px 200px;
+	width: 200px;
+	height: 200px;
+	display: $DisplayIcon;
+	margin-left: 40%;	
+}
+.news_four-block{
+	background-color: $BackPhotoColor;
+	margin-top: 2%;
+	margin-left: 10%;
+	margin-right: 10%;
+	border-radius: 2%;
+}
+.news_four-block #cod-photo{
+	background: url("../../assets/images/cod.png");
+	background-size: 200px 200px;
+	width: 200px;
+	height: 200px;
+	display: $DisplayIcon;
+	margin-left: 40%;	
+}
+.news_five-block{
+	background-color: $BackPhotoColor;
+	margin-top: 2%;
+	margin-left: 10%;
+	margin-right: 10%;
+	border-radius: 2%;
+}
+.news_five-block #mario-photo{
+	background: url("../../assets/images/mario.png");
+	background-size: 200px 200px;
+	width: 200px;
+	height: 200px;
+	display: $DisplayIcon;
+	margin-left: 40%;	
+}
+.photo-block div{
+	display:flex;
+	justify-content: center;
+}
+
+
+#tlt{
+	color: rgba($color: #2797a1, $alpha: 1.0);
+}
+
 
 .photo-block #panel1{
 	background: url("../../assets/images/FI.jpg");
