--- a/src/public/styles/scss/style.scss
+++ b/src/public/styles/scss/style.scss
@@ -331,6 +331,12 @@ div #stlt{
 	text-decoration: none;
 	color:#fff;
 }
+.footer div P{
+	
+	text-decoration: none;
+	color:#fff;
+	
+}
 @media screen and (max-width: 800px) {
 	body {
 		padding-top:80px;
