--- a/src/public/styles/css/style.css
+++ b/src/public/styles/css/style.css
@@ -314,7 +314,7 @@ div #stlt {
   position: inherit;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 80px;
   background-color: #023859;
 }
 
@@ -322,6 +322,7 @@ div #stlt {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-bottom: 10px;
 }
 
 .footer div a {
