--- a/src/public/styles/scss/style.scss
+++ b/src/public/styles/scss/style.scss
@@ -318,16 +318,16 @@ div #stlt{
 	position: inherit;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 80px;
     background-color: $HeaderFootColor;
 }
 .footer div{
 	display:flex;
 	align-items: center;
 	justify-content: space-evenly;
+	margin-bottom: 10px;
 }
-.footer div a{
-	
+.footer div a{;
 	text-decoration: none;
 	color:#fff;
 }
